src/test/ui/feature-gates/feature-gate-cfg-target-compact.stderr
error[E0658]: compact `cfg(target(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-compact.rs:1:7
   |
LL | #[cfg(target(os = "x"))]
   |       ^^^^^^^^^^^^^^^^
   |
   = note: see issue #96901 <https://github.com/rust-lang/rust/issues/96901> for more information
   = help: add `#![feature(cfg_target_compact)]` to the crate attributes to enable

error[E0658]: compact `cfg(target(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-compact.rs:4:12
   |
LL | #[cfg_attr(target(os = "x"), x)]
   |            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #96901 <https://github.com/rust-lang/rust/issues/96901> for more information
   = help: add `#![feature(cfg_target_compact)]` to the crate attributes to enable

error[E0658]: compact `cfg(target(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-compact.rs:7:19
   |
LL | #[cfg(not(any(all(target(os = "x")))))]
   |                   ^^^^^^^^^^^^^^^^
   |
   = note: see issue #96901 <https://github.com/rust-lang/rust/issues/96901> for more information
   = help: add `#![feature(cfg_target_compact)]` to the crate attributes to enable

error[E0658]: compact `cfg(target(..))` is experimental and subject to change
  --> $DIR/feature-gate-cfg-target-compact.rs:11:10
   |
LL |     cfg!(target(os = "x"));
   |          ^^^^^^^^^^^^^^^^
   |
   = note: see issue #96901 <https://github.com/rust-lang/rust/issues/96901> for more information
   = help: add `#![feature(cfg_target_compact)]` to the crate attributes to enable

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0658`.
